--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,6 @@ h11==0.14.0
 packaging==23.2
 psycopg2-binary==2.9.9
 sqlparse==0.4.4
-typing_extensions==4.9.0
 uvicorn==0.27.0.post1
 whitenoise==6.6.0
+beautifulsoup4==4.10.0
